...
  };

  // States
  const [origin, setOrigin] = useState<LocationPoint>({
    type: null,
    coords: null,
    label: "Choose starting point",
    campus: null,
  });

  const [destination, setDestination] = useState<LocationPoint>({
    type: null,
    coords: null,
    label: "Select Destination",
    campus: null,
  });

  const [currentRegion, setCurrentRegion] = useState(SGW_REGION);
  const [userLocation, setUserLocation] =
    useState<Location.LocationObjectCoords | null>(null);
...
