appId: com.githappens
---

- waitForAnimationToEnd:
    timeout: 1500

- tapOn:
    id: nearby-poi-button

- assertVisible: Nearby Places

- tapOn: Coffee

- tapOn: "5"

- tapOn: Search

- waitForAnimationToEnd:
    timeout: 3000

- assertVisible: Get Directions

- tapOn: Get Directions

- assertVisible:
    id: travel-mode-walking

- tapOn:
    id: travel-mode-walking

- tapOn: Start Navigation

- takeScreenshot: nearby-poi-panel
